replace Guava `Function` by Java `Function`
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>